@@ -163,6 +163,7 @@ April ? 2019 [Fufluns]
     * "read wall bit", "write wall bit" [Ralph]
     * "get npc sprite", "get hero sprite" convenience wrappers [Ralph]
     * "last menu item", "menu item count", "visible menu item count" [Ralph]
+    * "close menu" gains "run close script" argument [Ralph]
 
   * Changes
     * "Previous attack" base ATK stat renamed to "Last damage by attacker"
